# ChainForge-R1-SuperCoT

./: .gitmodules  LICENSE  README.md  deepseek_qwen2_5_integration_r1.py  pyproject.toml
.github/workflows/: lint.yml
agent/: main.py
agent/config/: agent_config.toml
agent/evolution/: nsga.py
agent/tools/: __init__.py  code_interpreter.py  fetch.py  shell.py
scripts/: benchmark.py  build_llama_metal.sh  run_agent.sh
